vlib/v/parser/tests/dec_use_as_value.vv
fn main() {
	for i := 100; i--; i > 0 {
	}
}
